# SO2-projekt

./: .gitignore  CMakeLists.txt  Fork.cpp  Fork.hpp  Philosopher.cpp  Philosopher.hpp  Program.cpp  Program.hpp  README.md  WaitForInput.cpp  WaitForInput.hpp  Waiter.cpp  Waiter.hpp  main.cpp
